@@ -3,6 +3,7 @@
 Feeds 6.x 1.0 XXXXXXXXXXXXXXXXXX
 --------------------------------
 
+- #906720 alex_b: Introduce a hook_feeds_after_clear().
 - #905820 tristan.oneil: Adjust delete message in FeedsDataProcessor to avoid
   misleading total numbers.
 - #671538 mburak: Use CURLOPT_TIMEOUT to limit download time of feeds.
